--- a/client/src/components/PuzzleTrainer.module.css
+++ b/client/src/components/PuzzleTrainer.module.css
@@ -64,7 +64,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  max-width: min(980px, calc(100vh - 200px));
+  max-width: min(980px, calc(100vh - 250px));
   width: 100%;
 }
 
